<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFEB3B"
    >

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:text="@string/registration_form"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/registration"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="295dp"
        android:layout_marginRight="295dp"
        android:text="@string/name"
        android:textSize="25sp"
        android:textColor="#FF0000"
        />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="241dp"
        android:layout_marginRight="241dp"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/first_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="294dp"
        android:layout_marginRight="294dp"
        android:text="@string/gender"
        android:textSize="25sp"
        android:textColor="#FF0000"
        />

    <RadioGroup
        android:id="@+id/radiogrp1"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/gender"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal"
        android:layout_marginStart="50dp">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/radiogrp1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="299dp"
        android:layout_marginRight="299dp"
        android:text="@string/email"
        android:textSize="25sp"
        android:textColor="#FF0000"
        />

    <EditText
        android:id="@+id/youremail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/email"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:gravity="center"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/youremail"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="244dp"
        android:layout_marginRight="244dp"
        android:text="@string/password"
        android:textSize="25sp"
        android:textColor="#FF0000"
        />

    <EditText
        android:id="@+id/yourpass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/pass"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:hint="@string/abc"
        android:inputType="textPassword" />

    <CheckBox
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/yourpass"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:text="@string/i_accept_terms_of_use"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/checkbox"
        android:onClick="checkboxclicked"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btn"
        android:layout_width="148dp"
        android:layout_height="64dp"
        android:layout_alignTop="@id/checkbox"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:text="@string/submit"
        app:backgroundTint="#FF0000"
        />


</RelativeLayout>